@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.2-3.12
-Date: 2007-11-29
+Version: 0.2-3.13
+Date: 2007-12-02
 Author: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Depends: R (>= 2.5.0), filehash, Matrix, methods, Snowball, XML
@@ -9,3 +9,4 @@ Imports: proxy
 Suggests: Rgraphviz, Rstem (>= 0.3-1)
 Description: A framework for text mining applications within R.
 License: GPL-2
+Encoding: UTF-8
